overflow errors fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,34 @@
 .App {
   background-color: var(--app-background);
-  height: 100%;
+
 }
 
 .App-wraper {
   display: flex;
   flex-direction: column;
-  width: calc(100%-120px);
-  padding: 5px 60px;
-  height: 97%;
+  width: calc(100% - 60px);
+  padding: 10px 30px;
+  height: calc(100vh - 20px);
 }
 
 @media (max-width: 900px) {
   .App-wraper {
-    width: calc(100%-20px);
+    width: calc(100% - 20px);
     padding: 5px 10px;
   }
 }
 
 .App_content {
   display: flex;
-  width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .App_left_side {
   width: max(120px, 30%);
-  height: 100%;
   display: flex;
   flex-direction: column;
   overflow: auto;
-
 }
 
 ::-webkit-scrollbar {
@@ -39,9 +37,10 @@
 }
 
 .App_right_side {
-  width: 70%;
   color: white;
   background-color: var(--app-background-deeper);
+  flex-grow: 1;
+  max-width: 70%;
 }
 
 .App_header {
@@ -58,7 +57,9 @@
   align-self: center;
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: sticky;
+  top: 0px;
+  background-color: var(--app-background);
 }
 
 .App_left_side_input_Error {
@@ -131,15 +132,11 @@
   flex-direction: column-reverse;
   gap: 10px;
   position: relative;
-  overflow-y: auto;
 }
 
 .messages_input {
   width: 100%;
-  margin: 0;
   background-color: var(--background-lightest);
-
-
 }
 
 .messages_input textarea {
@@ -151,15 +148,19 @@
 textarea:focus {
   outline: 1px solid var(--app-background);
 }
-
+.MP_messages_container{
+  display: flex;
+  flex-direction: column-reverse;
+  flex-grow: 1;
+  overflow: auto;
+  padding: 15px 0;
+}
 .MP_messages {
-
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   padding-inline: 8%;
   gap: 0.6em;
-
 }
 
 .MP_message {
